--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: GitHub Login
+      run: docker login --username jvictormarques --password ${{ secrets.GHCR_PSWD }} ghcr.io
+
     - name: Generate TAG
       id: generate_tag
       run: |
@@ -19,7 +22,6 @@ jobs:
 
     - name: Build and Push the Docker image
       run: |
-        docker login --username jvictormarques --password ${{ secrets.GHCR_PSWD }} ghcr.io
-        docker build ./app --tag ghcr.io/jvictormarques/react-image:latest
-        docker tag ghcr.io/jvictormarques/react-image:latest ghcr.io/jvictormarques/react-image:${{ steps.generate_tag.outputs.sha }}
-        docker push ghcr.io/jvictormarques/react-image --all-tags
+        docker build ./app --tag ghcr.io/joaoOrganization/react-image:latest
+        docker tag ghcr.io/joaoOrganization/react-image:latest ghcr.io/joaoOrganization/react-image:${{ steps.generate_tag.outputs.sha }}
+        docker push ghcr.io/joaoOrganization/react-image --all-tags
